--- a/sass/pages/__index.scss
+++ b/sass/pages/__index.scss
@@ -1,4 +1,4 @@
-/* Info Localisation Section */
+/* Info Localisation Div */
 .info-localisation {
     display: flex;
     align-items: center;
@@ -147,7 +147,7 @@
 
 .restaurant-card__info {
         display: flex;
-        align-items: top;
+        align-items: flex-start;
         height: auto;
         min-height: 75px;
         padding: 15px;
